--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         <p class="role">> Front-end / Full Stack Developer</p>
                         <p class="bio">
                             > Software Developer with 1.5+ years of professional full-stack experience.<br>
-                            > React | React Native | Node.js | Express | MongoDB | Django | Firebase | TypeScript
+                            > React | React Native | Node.js | Express | MongoDB | Django | Firebase | JavaScript |
+                            TypeScript
                         </p>
                         <div class="social-links">
                             <a href="https://github.com/AnupamBB" class="social-link" target="_blank">[ GitHub ]</a>
